@@ -1,5 +1,8 @@
 package org.arquillian.cube.kubernetes.impl.resolver;
 
+import java.io.BufferedWriter;
+import java.io.File;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.net.URL;
 
@@ -9,12 +12,29 @@ public class ResourceResolver {
     static final String FILE_PREFIX = "file";
     static final String CLASSPATH_PREFIX = "classpath:";
 
-    public static URL resolve(String location) {
+    private static File createTemporalDefinition(String content) throws IOException {
+        // In case it is not a http, file nor a classpath protocol,
+        // we assume that this is plain text. We store it in a temporary
+        // file and return the URL to it.
+        File tmp = File.createTempFile("arquillian-cube", ".res");
+
+        // Remove the temporary file after running the test
+        tmp.deleteOnExit();
+
+        // Write content to temporary file
+        BufferedWriter writer = new BufferedWriter(new FileWriter(tmp));
+        writer.write(content);
+        writer.close();
+
+        return tmp;
+    }
+
+    public static URL resolve(String content) {
         try {
-            if (location.startsWith(URL_PREFIX) || location.startsWith(FILE_PREFIX)) {
-                return new URL(location);
-            } else if (location.startsWith(CLASSPATH_PREFIX)) {
-                String classPathLocation = location.substring(location.indexOf(CLASSPATH_PREFIX)
+            if (content.startsWith(URL_PREFIX) || content.startsWith(FILE_PREFIX)) {
+                return new URL(content);
+            } else if (content.startsWith(CLASSPATH_PREFIX)) {
+                String classPathLocation = content.substring(content.indexOf(CLASSPATH_PREFIX)
                     + CLASSPATH_PREFIX.length());
                 final URL resource = Thread.currentThread().getContextClassLoader().getResource(classPathLocation);
 
@@ -24,7 +44,8 @@ public class ResourceResolver {
 
                 return resource;
             } else {
-                return new URL(location);
+                File tmp = ResourceResolver.createTemporalDefinition(content);
+                return tmp.toURI().toURL();
             }
         } catch (IOException e) {
             throw new IllegalArgumentException(e);
